# skultrafast

./: .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  __init__.py  azure-pipelines.yml  base_functions.py  base_functions_cl.py  base_functions_np.py  base_functions_numba.py  chi_sq_lin.py  cma.py  data_io.py  doc_requirements.txt  dv.py  enviroment.yml  fft_tool.py  filter.py  fit_spectrum.py  fitter.py  fitview.py  io.py  ir_helpers.py  kinetic_model.py  lifetimap.py  lifetimemap.py  lm_subclass.py  lmhelpers.py  lmtraits.py  model.py  multiplotter.py  plot_funcs.py  plot_helpers.py  pre_analyzier.py  py2_pol.py  (+10 more)
.github/workflows/: deploy_docs.yml  gh_docs.yml  python-package-conda.yml  python-package.yml  python-publish.yml
base_funcs/: base_functions_cl.py  base_functions_np.py
canvasgui/canvas_gui/: base.py  nodes.py
conda.recipe/: meta.yaml
docs/: Makefile  api.rst  conf.py  data_io.rst  dataset_example.ipynb  development.rst  example.rst  fitting.rst  index.rst  install.rst  introduction.rst  make.bat  pub_figures.rst  releasenotes.rst  start.rst  tutorial.nblink  zero-finding.rst  zero_finding_lot.py
docs/_static/: custom.css
examples/: test.npz
gui/: __init__.py  fft_tool.py  filter_tool.py  fitview.py  flownode.py  lifetime_map_gui.py  lmtraits.py  multiplotter.py  pre_analyzier.py  test_tup  traits_gui.py
skultrafast/: 2d_dataset.py  TwoD.py  __init__.py  _version.py  backend_numexpr.py  backend_tester.py  base_functions.py  base_functions_cl.py  base_functions_np.py  base_functions_numba.py  data_io.py  dataset.py  dv.py  filter.py  fit_spectrum.py  fitter.py  ir_helpers.py  kinetic_model.py  lifetimemap.py  lineshapes.py  lmfit_models.py  lmhelpers.py  messpy.py  messpy2D.py  model.py  nlo.py  pfid_fitter.py  plot_funcs.py  plot_helpers.py  pytorch_fitter.py  quickcontrol.py  ransac.py  referencing.py  single_spectrum.py  spectrum.py  styles.py  sympy_model.py  twoD_dataset.py  twoD_plotter.py  unit_conversions.py  (+2 more)
skultrafast/base_funcs/: ana.py  backend_tester.py  base_functions_cl.py  base_functions_np.py  base_functions_numba.py  lineshapes.py  pytorch_fitter.py
skultrafast/examples/: README.rst  convolution.ipynb  convolution.py  starting_example.py  tutorial.ipynb  tutorial_2d.py  tutorial_2d_signal_calculation.py  tutorial_compart_modeling.py  tutorial_figures.py  tutorial_fit_pfid.py  tutorial_messpy.py  tutorial_messpy25.py  tutorial_pfid.py  tutorial_qc.py  tutorial_quickcontrol.py  tutorial_spectrometer_calibration.py  tutorial_start.py  tutorial_sys_response_ir.py  wip_messpy25.py
skultrafast/examples/data/: PolystyreneFilm_spectrum.npz  germanium.npz  ir_waterabs.npy  messpyv1_data.npz
skultrafast/kubo_fitting/: __init__.py  backend_numpy.py  kubo_fitter.py
skultrafast/next_cls/: NextCLS_Sigma1.json  NextCLS_Sigma2.json  NextCLS_SigmaInf.json  __init__.py  two_d_nextcls.py
skultrafast/pseudo_zernike/: __init__.py  poly.py  ps_fit.py
skultrafast/tests/: test_basefuncs.py  test_data_io.py  test_dataset.py  test_imports.py  test_messpy.py  test_plot_helpers.py  test_quickcontrol.py  test_twodim.py  test_units.py  test_utils.py
tests/: __init__.py  test_basefuncs.py  test_data_io.py  test_dataset.py  test_imports.py  test_quickcontrol.py  test_twodim.py  test_units.py
