[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Till Stensitzki", email = "mail.till@gmx.de"},
]
dependencies = [
  "attrs",
  "h5py",
  "joblib",
  "lmfit",
  "matplotlib",
  "numba",
  "numpy",
  "pooch",
  "pytest",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "sympy",
  "wrapt",
]

description = "Python package for analyzing time-resolved spectra."
dynamic = ["version"]
keywords = [
  "chemistry",
  "physics",
  "pump-probe",
  "science",
  "spectroscopy",
  "time-resolved",
]
license = "BSD-3-Clause"
license-file = "LICENSE.txt"
name = "skultrafast"
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
Homepage = "http://github.com/tillsten/skultrafast"

[project.optional-dependencies]
doc = [
  "sphinx >= 4",
  "sphinx-gallery",
  "pytest",
  "docutils",
  "sphinx-autoapi",
  "furo",
]

[tool.hatch.version]
path = "skultrafast/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/skultrafast",
]



[tool.hatch.envs.doc]
dependencies = [
  "sphinx >= 4",
  "sphinx-gallery",
  "pytest",
  "docutils",
  "sphinx-autoapi",
  "furo",
]

[tool.hatch.envs.doc.scripts]
build = "cd docs && make html"

