[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Till Stensitzki", email = "mail.till@gmx.de"},
]
dependencies = [
  "attrs",
  "h5py",
  "joblib",
  "lmfit",
  "matplotlib",
  "numpy",
  "pooch",
  "pytest",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "wrapt",
]

description = "Python package for analyzing time-resolved spectra."
dynamic = ["version"]
keywords = [
  "chemistry",
  "physics",
  "pump-probe",
  "science",
  "spectroscopy",
  "time-resolved",
]
license = {file = "LICENSE.txt"}
name = "skultrafast"
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
Homepage = "http://github.com/tillsten/skultrafast"

[project.optional-dependencies]
doc = [
  "sphinx >= 4",
  "sphinx-gallery",
  "pytest",
  "docutils",
  "sphinx-autoapi",
  "furo",
  "sympy",
]
accel_numba = [
  "numba",
]
accel_pytorch = [
  "torch", 
]

[tool.hatch.version]
path = "skultrafast/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/skultrafast",
]

[tool.hatch.envs.doc.scripts]
build = "cd docs && make html"
features = ["doc"]

[tool.ruff.lint]
ignore = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
skultrafast = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
accel-numba = { features = ["accel_numba"], solve-group = "default" }
accel-pytorch = { features = ["accel_pytorch"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }

[tool.pixi.dependencies]
make = ">=4.4.1,<5"

[tool.pixi.feature.doc.tasks]
build-docs = { cmd = "{% if pixi.is_win %}./make.bat{% else %}./make {% endif %} html",  cwd = "docs" }

[package.build.config]
ignore-pypi-mapping = false
